--- a/maram.ipynb
+++ b/maram.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gurobipy as grb\n",
     "import pandas as pd\n",
     "from gurobipy import GRB\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from multiprocessing import Pool\n"
    ]
   },
   {
@@ -28,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-01-11\n"
+     ]
+    }
+   ],
    "source": [
     " # Create a model\n",
     "model = grb.Model(\"Model\")"
@@ -45,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the  data from the json file small.json\n",
     "import json\n",
-    "with open('small.json') as f:\n",
+    "with open('large.json') as f:\n",
     "    data = json.load(f)\n",
     "# data"
    ]
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,56 +364,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "def solve_model(model):\n",
     "# setObjectiveN\n",
-    "model.ModelSense = GRB.MAXIMIZE\n",
-    "model.setObjectiveN( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , 0, 2)\n",
-    "model.setObjectiveN( - max_i , 1, 1)\n",
-    "model.setObjectiveN( -  100*max_j -  grb.quicksum(nj[j] for j in J), 2, 0)\n",
+    "    model.ModelSense = GRB.MAXIMIZE\n",
+    "    model.setObjectiveN( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , 0, 2)\n",
+    "    model.setObjectiveN( - max_i , 1, 1)\n",
+    "    model.setObjectiveN( -  100*max_j -  grb.quicksum(nj[j] for j in J), 2, 0)\n",
     "\n",
-    "# Paramétrage (mode mute)\n",
-    "model.params.outputflag = 0"
+    "    # Paramétrage (mode mute)\n",
+    "    model.params.outputflag = 0\n",
+    "    # Résolution du PL\n",
+    "    model.optimize()\n",
+    "    #model.computeIIS()\n",
+    "    model.write(\"model.lp\")\n",
+    "    return (model.ObjVal)\n",
+    "\n",
+    "\n",
+    "def parallel_optimize():\n",
+    "    with Pool(processes=4) as pool:\n",
+    "        results = pool.map(solve_model, range(4))\n",
+    "    return results\n",
+    "\n",
+    "# Parallelize the optimization\n",
+    "results = parallel_optimize()\n",
+    "\n",
+    "# Print the results\n",
+    "print(results)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Résolution du PL\n",
-    "model.optimize()\n",
-    "#model.computeIIS()\n",
-    "model.write(\"model.lp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "65.0"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.ObjVal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -796,11 +791,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "992fe7c5fc85bbb99cdbb1a7127f4f04531c143f133625dff1af063a39de0f81"
+    "hash": "7ba4d9131b28a25e673a5eedffce26d9d813237da3453983d8ab74cee15e9ce5"
    }
   }
  },
